# Kage

./: .gitignore  ENCRYPTED_FILES_README.md  README.md  create_encrypted_file.php  encrypted_example.php  final_bytecode_crypto_demo.php  generated_encrypted_file.php  opcode_level_encryption_demo.php  test_php_bytecode.php
c_extension/: CMakeLists.txt  TODO.md  build.sh  bytecode_extraction_demo.php  cleanup.sh  config.h.in  config.nice  configure  final_bytecode_demo.php  kage.ini.in  kage_vld_integration.php  test.php  test_extension.php  test_vld.php  test_vld_detailed.php
c_extension/autom4te.cache/: output.0  output.1  requests  traces.0
c_extension/src/: ast.c  ast.h  base64.c  base64.dep  base64.h  bytecode_crypto.c  bytecode_crypto.h  config.h  crypto.c  crypto.dep  crypto.h  kage.c  kage.dep  kage_config.c  kage_config.h  kage_context.c  kage_context.h  kage_memory.c  kage_memory.h  kage_test.h  kage_validation.h  php_bytecode_extractor.c  php_compiler.c  php_compiler.h  vm.c  vm.h
config/: php.ini
docs/: Comprehensive Analysis of Free Alternatives to ion.md  Conversion of PHP Abstract Syntax Trees to Bytecod.md  How can I convert PHP AST to bytecodes using nikicphp-ast.md  Native PHP AST Parsing in C_ Zend Engine and php-a.md
src/: create_self_decrypt.php  decrypt_string.php  encoder.php  php_encoder.php  source.php
tests/: test_ast.php  test_bytecode_encryption.php  test_integration.php  test_kage_extension.php  test_php_encoder.php  test_source.php  test_source_encrypted.php  test_vm.php
